namespaces/live.cloud-platform.service.justice.gov.uk/laa-assess-a-claim-uat/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "laa-assess-a-claim-uat"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "uat"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "LAA"
    cloud-platform.justice.gov.uk/slack-channel: "laa-e2e-claimandassess"
    cloud-platform.justice.gov.uk/application: "LAA Assess a Claim service"
    cloud-platform.justice.gov.uk/owner: "Service Transformation Group: laa-claim-and-assess-mailbox@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/laa-assess-a-claim"
    cloud-platform.justice.gov.uk/team-name: "laa-claim-and-assess"
    cloud-platform.justice.gov.uk/review-after: ""
